--- a/negocio.html
+++ b/negocio.html
@@ -18,7 +18,7 @@
     <script src="js/negocio.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
+    <nav class="navbar navbar-expand-md navbar-light bg-light py-3 py-lg-1">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
           <img
@@ -43,25 +43,33 @@
           style="justify-content: end"
           id="navbarNav"
         >
-        <ul class="navbar-nav">
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
-              >INICIATIVAS</a
-            >
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html">NEGOCIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html">USUARIO</a>
-          </li>
-          <li class="nav-item px-4">
-            <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html">TU OPINIÓN</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="index.html"
+                >INICIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="iniciativas.html"
+                >INICIATIVAS</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="negocio.html"
+                >NEGOCIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="usuario.html"
+                >USUARIO</a
+              >
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link fw-bold fs-4 text-dark" href="tuopinion.html"
+                >TU OPINIÓN</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -69,7 +77,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="ms-4 mt-3" style="color: #1a4301"style="font-size: 95px" ;>
+            <h1
+              class="ms-4 mt-3"
+              style="color: #1a4301"
+              style="font-size: 95px"
+              ;
+            >
               Convierte los alimentos no vendidos en ingresos
             </h1>
             <p class="text-black fs-3 ms-4 mb-5 mt-5">
@@ -86,7 +99,8 @@
                 type="text"
                 class="form-control border-2 border-success rounded-pill"
                 id="nombredelnegocio"
-                placeholder="Nombre del Negocio">
+                placeholder="Nombre del Negocio"
+              />
               <label for="Nameinput">Nombre del Negocio</label>
             </div>
           </div>
@@ -94,17 +108,18 @@
       </div>
       <div class="container-fluid">
         <div class="row">
-      <div class="col-md-6">
-        <div class="form-floating mb-4 ms-4  text-dark">
-          <input
-            type="text"
-            class="form-control border-2 border-success rounded-pill"
-            id="numerodetelefono"
-            placeholder="Numero de teléfono">
-          <label for="Nameinput">Numero de teléfono</label>
+          <div class="col-md-6">
+            <div class="form-floating mb-4 ms-4 text-dark">
+              <input
+                type="text"
+                class="form-control border-2 border-success rounded-pill"
+                id="numerodetelefono"
+                placeholder="Numero de teléfono"
+              />
+              <label for="Nameinput">Numero de teléfono</label>
+            </div>
+          </div>
         </div>
-      </div>
-      </div>
       </div>
       <div class="container-fluid">
         <div class="row">
@@ -115,7 +130,8 @@
                 class="form-control border-2 border-success rounded-pill"
                 style="border-color: #1a4301"
                 id="correoelectronico"
-                placeholder="Dirección de correo electrónico">
+                placeholder="Dirección de correo electrónico"
+              />
               <label for="floatingInput">Dirección de correo electrónico</label>
             </div>
           </div>
@@ -124,20 +140,21 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <div class="form-floating mb-4 ms-4  text-dark">
+            <div class="form-floating mb-4 ms-4 text-dark">
               <input
                 type="email"
                 class="form-control border-2 border-success rounded-pill"
-                style="border-color: #1a4301;"
+                style="border-color: #1a4301"
                 ;;
                 id="ciudad"
-                placeholder="Ciudad">
+                placeholder="Ciudad"
+              />
               <label for="floatingInput">Ciudad</label>
             </div>
             <button
               type="button"
-              class="rounded-pill btn  fw-bold ms-4 mt-4 text-white mb-4"
-              style="border-color: #1a4301; background-color: #1a4301;"
+              class="rounded-pill btn fw-bold ms-4 mt-4 text-white mb-4"
+              style="border-color: #1a4301; background-color: #1a4301"
               ;
               ;
               onclick="negocio()"
@@ -153,7 +170,7 @@
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
             <div>
               <div class="col-md-6" style="position: absolute; top: 10px">
-                <h1 class="text-white ms-4 mt-5"style="font-size: 90px">
+                <h1 class="text-white ms-4 mt-5" style="font-size: 90px">
                   Beneficios de poner tu negocio en nuestra app
                 </h1>
                 <p class="text-white fs-3 ms-4 mt-5 fw-bold">
@@ -180,51 +197,53 @@
                   Beneficios de poner tu negocio en nuestra app
                 </h1>
                 <p class="text-white fs-5">
-                  Permite reducir el desperdicio de 
-                 alimentos y recuperar dinero extra.
-                  </p>
+                  Permite reducir el desperdicio de alimentos y recuperar dinero
+                  extra.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-          <div class="row">
-          <div class="col-md-6 px-5 pt-3 ">
-            <a
-            type="button"
-            class="button rounded-pill fs-3 text-white fw-bold ms-2"
-            style="
-              text-decoration: none;
-              border-color: #1a4301;
-              background-color: #1a4301;
-              height: 85px;
-              justify-content: center;
-            "
-            href="./instructivo/InstructivoShareBeforeWaste.png" alt="_blank"
-            download
-            >
-            <p class="mt-3 fs3 me-3 ms-3">
-              INSTRUCTIVO
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="22"
-                height="16"
-                viewBox="0 0 22 16"
-                fill="none"
-              ><path
-                  d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
-                  fill="white"
-                />
-              </svg>
-            </p>
-          </a>
-        </div>
-      </div>
-    </div>
-    </div>
       <div class="container-fluid">
         <div class="row">
-          <h2 class=" text-center fs-1 mt-5" style="color: #1a4301" ;>
+          <div class="col-md-6 px-5 pt-3">
+            <a
+              type="button"
+              class="button rounded-pill fs-3 text-white fw-bold ms-2"
+              style="
+                text-decoration: none;
+                border-color: #1a4301;
+                background-color: #1a4301;
+                height: 85px;
+                justify-content: center;
+              "
+              href="./instructivo/InstructivoShareBeforeWaste.png"
+              alt="_blank"
+              download
+            >
+              <p class="mt-3 fs3 me-3 ms-3">
+                INSTRUCTIVO
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="22"
+                  height="16"
+                  viewBox="0 0 22 16"
+                  fill="none"
+                >
+                  <path
+                    d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
+                    fill="white"
+                  />
+                </svg>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <h2 class="text-center fs-1 mt-5" style="color: #1a4301" ;>
             Empresas que trabajan con nosotros
           </h2>
         </div>
@@ -254,61 +273,62 @@
                     alt="empresa"
                   />
                 </div>
-              <div class="carousel-item">
-                <div class="col-md-3">
+                <div class="carousel-item">
+                  <div class="col-md-3">
+                    <img
+                      src="imagenes/empresa3.png"
+                      class="img-fluid"
+                      alt="empresa"
+                    />
+                  </div>
+                  <div class="card-img-overlay"></div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col-md-3">
+                <div class="card-img">
                   <img
-                    src="imagenes/empresa3.png"
+                    src="imagenes/empresa4.png"
                     class="img-fluid"
                     alt="empresa"
                   />
                 </div>
-                <div class="card-img-overlay"></div>
               </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="col-md-3">
-              <div class="card-img">
-                <img
-                  src="imagenes/empresa4.png"
-                  class="img-fluid"
-                  alt="empresa"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="col-md-3">
-              <img
-                src="imagenes/empresa5.png"
-                class="img-fluid"
-                alt="empresa"
-              />
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="col-md-3">
-              <img
-                src="imagenes/empresa6.png"
-                class="img-fluid"
-                alt="empresa"
-              />
             </div>
             <div class="carousel-item">
               <div class="col-md-3">
                 <img
-                  src="imagenes/empresa7.png"
+                  src="imagenes/empresa5.png"
                   class="img-fluid"
                   alt="empresa"
-                  class="img-fluid"
                 />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col-md-3">
+                <img
+                  src="imagenes/empresa6.png"
+                  class="img-fluid"
+                  alt="empresa"
+                />
+              </div>
+              <div class="carousel-item">
+                <div class="col-md-3">
+                  <img
+                    src="imagenes/empresa7.png"
+                    class="img-fluid"
+                    alt="empresa"
+                    class="img-fluid"
+                  />
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
       <script>
-        let items = document.querySelectorAll(".carousel .carousel-item");
+        let items = document.querySelectorAll(".carousel .carousel-item ");
         console.log(items.length);
         items.forEach((el) => {
           const minPerSlide = 5;
